@@ -454,6 +454,29 @@ public abstract class Resource {
     }
 
     /**
+     * Returns the list of proxy authentication requests sent by an origin server to a
+     * client. If none is available, an empty list is returned.
+     * 
+     * @return The list of proxy authentication requests.
+     * @see Response#getProxyChallengeRequests()
+     */
+    public List<ChallengeRequest> getProxyChallengeRequests() {
+        return getResponse() == null ? null : getResponse()
+                .getProxyChallengeRequests();
+    }
+
+    /**
+     * Returns the proxy authentication response sent by a client to an origin server.
+     * 
+     * @return The proxy authentication response sent by a client to an origin server.
+     * @see Request#getProxyChallengeResponse()
+     */
+    public ChallengeResponse getProxyChallengeResponse() {
+        return getRequest() == null ? null : getRequest()
+                .getProxyChallengeResponse();
+    }
+
+    /**
      * Returns the resource reference's optional query. Note that modifications
      * to the returned {@link Form} object aren't reported to the underlying
      * reference.
